@@ -32,7 +32,7 @@
     <url>https://github.com/r2dbc/r2dbc-proxy</url>
 
     <properties>
-        <assertj.version>3.17.2</assertj.version>
+        <assertj.version>3.19.0</assertj.version>
         <java.version>1.8</java.version>
         <jsr305.version>3.0.2</jsr305.version>
         <junit.version>5.7.0</junit.version>
@@ -40,9 +40,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <r2dbc-spi.version>0.9.0.M1</r2dbc-spi.version>
-        <reactor.version>Dysprosium-SR12</reactor.version>
-        <spring-boot.version>2.2.0.RELEASE</spring-boot.version>
-        <mockito.version>3.5.15</mockito.version>
+        <reactor.version>2020.0.4</reactor.version>
+        <spring-boot.version>2.4.3</spring-boot.version>
+        <mockito.version>3.8.0</mockito.version>
     </properties>
 
     <licenses>
